[package]
name = "url2gif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.31.0"
image = "0.24"
gif = "0.12"
tokio = { version = "1.16.1", features = ["full"] }

[target.x86_64-unknown-linux-musl]
rustflags = [
  "-C", "linker=musl-gcc",
]
